# server/routes/system/index.js
@@ -1,0 +1,10 @@
+const express = require('express');
+const authJWT = require('../../utils/authJWT');
+const {getSystemPerformance} = require('./systemPerformance');
+const router = express.Router();
+
+router.get('/performance', authJWT, getSystemPerformance);
+
+
+
+module.exports = router;
