# server/routes/users/index.js
@@ -1,6 +1,7 @@
 const express = require('express');
 const {findUserId, resetUserPassword, updateUserPassword} = require('./findUserInfo');
 const {checkEmail, register} = require('./register');
+const { getMyInfo } = require('./getMyInfo');
 const authJWT = require('../../utils/authJWT');
 
 const router = express.Router();
@@ -10,6 +11,7 @@ router.post('/resetUserPassword', resetUserPassword);
 router.put('/updateUserPassword', updateUserPassword);
 router.post('/register', register);
 router.get('/checkEmail', checkEmail);
+router.get('/getmyInfo', authJWT, getMyInfo);
 
 
 
